--- a/Support/main.css
+++ b/Support/main.css
@@ -1,5 +1,5 @@
 .header {  
-	background-colour: blue;  
+	background-color: blue;  
 	background-size: cover;  
 	background-position: center;  
 	position: relative; 
